# Intelekt-CLI

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml
.github/workflows/: upstream-check.yml
crates/codegen/intelekt-auth/: Cargo.toml
crates/codegen/intelekt-hooks/: Cargo.toml
crates/codegen/intelekt-markdown/: Cargo.toml
crates/codegen/intelekt-memory/: Cargo.toml
crates/codegen/intelekt-mermaid/: Cargo.toml
crates/codegen/intelekt-models/: Cargo.toml  default_models.json
crates/codegen/intelekt-pager/: Cargo.toml  README.md
crates/codegen/intelekt-pager-bin/: Cargo.toml
crates/codegen/intelekt-pager-minimal/: Cargo.toml
crates/codegen/intelekt-pager-pty-harness/: Cargo.toml
crates/codegen/intelekt-pager-render/: Cargo.toml
crates/codegen/intelekt-paths/: Cargo.toml
crates/codegen/intelekt-sandbox/: Cargo.toml
crates/codegen/intelekt-shell/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/intelekt-test-support/: README.md
crates/codegen/intelekt-tools/: Cargo.toml
crates/codegen/intelekt-update/: Cargo.toml
crates/codegen/intelekt-voice/: Cargo.toml
crates/codegen/intelekt-workspace/: Cargo.toml
crates/codegen/intelekt-workspace-client/: Cargo.toml
crates/codegen/intelekt-workspace-types/: Cargo.toml
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-grok-agent/: Cargo.toml  README.md
crates/codegen/xai-grok-announcements/: Cargo.toml
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-config-types/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: flags.rs  lib.rs  memory.rs  pool.rs
crates/codegen/xai-grok-env/: Cargo.toml
crates/codegen/xai-grok-hooks/: Cargo.toml
crates/codegen/xai-grok-http/: Cargo.toml
crates/codegen/xai-grok-markdown-core/: Cargo.toml
crates/codegen/xai-grok-mcp/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-plugin-marketplace/: Cargo.toml
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampling-types/: Cargo.toml
crates/codegen/xai-grok-secrets/: Cargo.toml
crates/codegen/xai-grok-shared/: Cargo.toml
crates/codegen/xai-grok-shell/: CHANGELOG.md  README.md
crates/codegen/xai-grok-shell-base/: Cargo.toml
crates/codegen/xai-grok-shell-session-support/: Cargo.toml
crates/codegen/xai-grok-shell-session-support/src/: lib.rs
crates/codegen/xai-grok-tools/: build.rs  (+1 more)
docker/: entrypoint.sh  session-server.js
(+1272 files in other folders)
