[package]
license = "Apache-2.0"
name = "intelekt-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the grok CLI, extracted from intelekt-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
intelekt-announcements = { workspace = true }
intelekt-config = { workspace = true }
intelekt-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
