[package]
license = "Apache-2.0"
name = "intelekt-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the grok CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
intelekt-auth = { workspace = true, features = ["middleware"] }
intelekt-sampler = { path = "../intelekt-sampler" }
intelekt-telemetry = { workspace = true }
intelekt-version = { workspace = true }
intelekt-workspace = { workspace = true }

[lints]
workspace = true
